# Exam-Portal

./: .env  Cargo.toml  Dockerfile  Makefile  set-env.sh
.github/workflows/: deploy.yml
.sqlx/: query-0766e45086950505250109bb9311b4c9aa8c273b6c4d5867852eb0faa3029a8e.json  query-368adae49f659db51c96edfa724e967ec21510dcdee1618a7af7f373a8946be0.json  query-ec77412d5c7ee65b4d47915309bc4a9ef49d92a23e4c5bc79e2cd3b11c8e5552.json
integration-tests/: cucumber_test.go  go.mod  topic_steps.go
integration-tests/features/: topic.feature
src/: controller.rs  db.rs  main.rs  structs.rs
