[package]
name = "exam-portal"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
dotenvy = "0.15" # for loading .env
tokio = { version = "1.37", features = ["full"] }